--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h2>
         Assignment Link Part B 
     </h2>
-    <h3><a href="b.html" target="_blank">Click Here</a> to view the page</h3>
+    <h3><a href="b.html" target="_blank ">Click Here</a> to view the page</h3>
+
+    <h2>
+        Assignment Link Part C 
+    </h2>
+    <h3><a href="final.html" target="_blank ">Click Here</a> to view the page</h3>
 </body>
 </html>
