--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
         Assignment Link Part C 
     </h2>
     <h3><a href="final.html" target="_blank ">Click Here</a> to view the page</h3>
+    <h2>
+        Twine Project -> Love's Worth. 
+    </h2>
+    <h3><a href="lovesworth.html" target="_blank ">Click Here</a> to view the page</h3>
 </body>
 </html>
