--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <h2>
         Twine Project -> Love's Worth. 
     </h2>
-    <h3><a href="lovesworth.html" target="_blank ">Click Here</a> to view the page</h3>
+    <h3><a href="commfinal.html" target="_blank ">Click Here</a> to view the page</h3>
 </body>
 </html>
