--- a/commfinal.html
+++ b/commfinal.html
@@ -199,7 +199,7 @@ The date was fun! I got to know more about him, his family, and now I feel emoti
 [[open Tinder]] &lt;img src=&quot;https://i.giphy.com/media/wlryHx7lYkEl1fVtwz/giphy.webp&quot; width=&quot;100px&quot;&gt;
 (set: $mental to 100)(set: $energy to 100)(set: $love to 0)(set: $money to 200)</tw-passagedata><tw-passagedata pid="20" name="open Tinder" tags="" position="271.66666666666674,133.33333333333334" size="100,100">I see a cool profile. &lt;img src=&quot;https://static.wixstatic.com/media/402b1d_cfb61b98dbe6438fbe5399de032b6947~mv2.png&quot;&gt;
 Name: Mike
-Ager: 20
+Age: 20
 Has a cute dog!
 Chemistry Major.
 And such a good looking man..
