updated my final draft

--- a/Lama_comm150final.html
+++ b/Lama_comm150final.html
@@ -137,7 +137,7 @@ I am debating if I should buy Mike a gift or not, since my finicial situation is
 [[I just wish him a merry christmas]]&lt;/div&gt;
 &lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_2ea74d57f78b41daba6e5b3f3ad5c63b.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="6" name="we stop talking" tags="" position="785,320" size="100,100">You cut ties with Mike, and a potential lover is gone.
 &lt;hr&gt;
-A life without love can be a good one: you will still have friends and family to fall back on, and you will still have dreams and aspirations. However, you can&#39;t shake the feeling that Mike could have been your person. When you think about what you could have had with him, the sun seems to shine a little less bright, and colors seem less vibrant.&lt;center&gt;&lt;img src=&quot;https://i.giphy.com/media/6qpRX91Pecqr3waBdv/giphy.webp&quot; width=&quot;200px&quot;&gt;&lt;/center&gt;
+A life without love can be a good one: you will still have friends and family to fall back on, and you will still have dreams and aspirations. However, you can&#39;t shake the feeling that Mike could have been your person. When you think about what you could have had with him, the sun seems to shine a little less bright, and colors seem less vibrant. If you could [[go back in time|p1]] would you go down a different path?&lt;center&gt;&lt;img src=&quot;https://i.giphy.com/media/6qpRX91Pecqr3waBdv/giphy.webp&quot; width=&quot;200px&quot;&gt;&lt;/center&gt;
 &lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_13c1bec3d8d743dba384999ca398d040.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="I buy him a gift" tags="" position="1105,923" size="100,100">&lt;div class=&quot;padd&quot;&gt;(set: $money to $money - 60) $$-- |⚡︎--| ♥++(set: $energy to $energy - 20) (set: $love to $love + 10)
 I&#39;ve decide on a decent gift, and I am happy that I get to give him his gift. But I need to work an extra shift at work, so I can pay rent by the end of the month. However, the fact that I put so much thought into this gift made me think of him a lot and talk about him a lot as well! Now I&#39;m realizing how much I like him!
 &lt;center&gt;&lt;img src=&quot;https://i.giphy.com/media/KUgjPPLEGEDNXv8fKG/giphy.webp&quot;&gt;&lt;/center&gt;
@@ -167,7 +167,7 @@ As we continue texting and talking more often, I feel being friends with Mike is
 
 &lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_f3d64e22fa7e49a4ab36ee22e1518c35.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="you ask him out on a date" tags="date" position="1691,901" size="100,100">&lt;div class=&quot;padd&quot;&gt;(set: $money to $money - 40) --$$|-- ⚡︎(set: $energy to $energy -10) 
 I decide to take him out on a date, and I also offer to pay for food. I need to work an extra shift at work because I wont able to make the cut for rent. I&#39;m really stressed! I can&#39;t help but wonder if I&#39;m emotionally and financially ready for a relationship. Should I put my doubts aside and [[confess my feelings]] or am I just [[not ready |we stop talking]]?&lt;/div&gt;
-&lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_f3d64e22fa7e49a4ab36ee22e1518c35.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="you fight for the relationship" tags="" position="2077,353" size="100,100">(set: $love to $love + 10) ♥++ | ⚡︎--|🧠--(set: $energy to $energy - 20) (set: $mental to $mental - 20) 
+&lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_f3d64e22fa7e49a4ab36ee22e1518c35.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="you fight for the relationship" tags="" position="2077,354.6666666666667" size="100,100">(set: $love to $love + 10) ♥++ | ⚡︎--|🧠--(set: $energy to $energy - 20) (set: $mental to $mental - 20) 
 I&#39;ve decided that this relationship is worth staying in, regardless of the effort it takes to maintain it.
 I want it to work!
 I&#39;ve realized that love is a lot of work, and it is not easy, but I see a future with him. That alone makes it worth it.
@@ -175,6 +175,9 @@ I&#39;ve realized that love is a lot of work, and it is not easy, but I see a fu
 Now, I have a lot of love, but I&#39;ve made many sacrifices for it. However, I have faith that as this relationship stabilizes, the effort that I poured into it will be poured back into me and then some.
 So was all this struggle really worth it?
 I think it was! :)
+
+What about you, do you think it was worth it? if you could [[go back in time|p1]] would you do anything differently?
+
 &lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_f3d64e22fa7e49a4ab36ee22e1518c35.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="14" name="Decide to just stay friends..." tags="" position="1100,1425" size="100,100">Mike is a great person after all, but you have reached Love level of zero again and that means that you are ready to move on and its best if Mike stays around as a friend!&lt;center&gt;&lt;img src=&quot;https://i.giphy.com/media/liQFTYWrKsgPWgw2br/giphy.webp&quot;&gt;&lt;/center&gt;&lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_3119c40275ce4a01a67d18d64247545c.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="15" name="push through this" tags="" position="2100,928" size="100,100">(set: $love to $love + 20) ♥++(set: $mental to $mental - 20) 🧠--
 
 I am trying hard to make things work. I&#39;m feeling a little drained, but I am oddly satisfied, and each day, I grow to love Mike a little bit more. It&#39;s strange how love works: it feels magical but takes effort!
@@ -195,15 +198,15 @@ Mike likes me back and wants to start dating! Everything was going smoothly at f
 Now, I can either [[push through this]] or talk to Mike about [[taking a break|I stay at my friend&#39;s dorm]]&lt;/div&gt;
 &lt;div&gt;&lt;audio src=&quot;https://static.wixstatic.com/mp3/402b1d_441b503834c6464da825e9ab4e88f00f.mp3&quot; autoplay&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="18" name="schedule another date later" tags="" position="1331,1260" size="100,100">(set: $love to $love + 20) ♥++
 The date was fun! I got to know more about him, his family, and now I feel emotionally invested in him! 
-[[Skip to February|move forward to feb]]</tw-passagedata><tw-passagedata pid="19" name="Untitled Passage 1" tags="" position="60,145.00000000000006" size="100,100">Today is October 1st.. I am super bored, I have downloaded Tinder recently but never got the chance to use it or go on dates with people.
+[[Skip to February|move forward to feb]]</tw-passagedata><tw-passagedata pid="19" name="p1" tags="" position="60,145" size="100,100">Today is October 1st.. I am super bored, I have downloaded Tinder recently but never got the chance to use it or go on dates with people.
 [[open Tinder]] &lt;img src=&quot;https://i.giphy.com/media/wlryHx7lYkEl1fVtwz/giphy.webp&quot; width=&quot;100px&quot;&gt;
-(set: $mental to 100)(set: $energy to 100)(set: $love to 0)(set: $money to 200)</tw-passagedata><tw-passagedata pid="20" name="open Tinder" tags="" position="271.66666666666674,133.33333333333334" size="100,100">I see a cool profile. &lt;img src=&quot;https://static.wixstatic.com/media/402b1d_cfb61b98dbe6438fbe5399de032b6947~mv2.png&quot;&gt;
+(set: $mental to 100)(set: $energy to 100)(set: $love to 0)(set: $money to 200)</tw-passagedata><tw-passagedata pid="20" name="open Tinder" tags="" position="271,134.66666666666666" size="100,100">I see a cool profile. &lt;img src=&quot;https://static.wixstatic.com/media/402b1d_cfb61b98dbe6438fbe5399de032b6947~mv2.png&quot;&gt;
 Name: Mike
-Ager: 20
+Age: 20
 Has a cute dog!
 Chemistry Major.
 And such a good looking man..
-should I [[swipe right|Untitled Passage]] or [[swipe left|we stop talking]]</tw-passagedata><tw-passagedata pid="21" name="Untitled Passage" tags="" position="158.33333333333326,276.6666666666667" size="100,100">&lt;div class=&quot;padd&quot;&gt;You get a text from Mike
+should I [[swipe right|Untitled Passage]] or [[swipe left|we stop talking]]</tw-passagedata><tw-passagedata pid="21" name="Untitled Passage" tags="" position="158,276" size="100,100">&lt;div class=&quot;padd&quot;&gt;You get a text from Mike
 &lt;center&gt;&lt;img src=&quot;https://i.giphy.com/media/KcnlGHBpnKnjZIuCMv/giphy.webp&quot;&gt;&lt;/center&gt;
 Do I [[ignore it|we stop talking]] or [[open it |intro]]?
 &lt;/div&gt;
